Add unit tests for MockAllExecutionListener.