@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinTest
+
 plugins {
     kotlin("jvm") version "1.9.0"
     `java-library`
@@ -30,6 +32,8 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 kotlin {
